# nullc

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  CmdRef.html  CmdRef.txt  CodeInfo.cpp  CodeInfo.h  Colorer.cpp  Colorer.h  Compiler.cpp  Compiler.h  Executor.cpp  Executor.h  Executor_X86.cpp  Executor_X86.h  LICENSE  LangRef.txt  LanguageEN.html  LibraryEN.html  Makefile  ObjectPool.h  Optimizer_x86.cpp  Optimizer_x86.h  ParseClass.h  ParseCommand.h  ParseFunc.cpp  ParseFunc.h  README.md  RichTextarea.cpp  RichTextarea.h  StdLib_X86.h  SupSpi.cpp  SupSpi.h  SuperCalc.cpp  SuperCalc.rc  SuperCalc.sln  SuperCalc.vcproj  SuperCalc_100.sln  SuperCalc_100.vcxproj  (+31 more)
ConsoleCalc/: ConsoleCalc.cpp  ConsoleCalc.vcproj  ConsoleCalc_100.vcxproj  ConsoleCalc_110.vcxproj  ConsoleCalc_110.vcxproj.filters  ConsoleCalc_141.vcxproj  ConsoleCalc_141.vcxproj.filters  (+1 more)
NULLC/: Allocator.h  Android.mk  Array.h  BinaryCache.cpp  BinaryCache.h  Bytecode.cpp  Bytecode.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  CodeGenRegVm_X86.cpp  CodeGenRegVm_X86.h  CodeGen_X86.cpp  CodeGen_X86.h  CodeInfo.cpp  CodeInfo.h  Compiler.cpp  Compiler.h  ConstantFold.h  DenseMap.h  Executor.cpp  Executor.h  Executor_Common.cpp  Executor_Common.h  Executor_LLVM.cpp  Executor_LLVM.h  Executor_RegVm.cpp  Executor_RegVm.h  Executor_X86.cpp  Executor_X86.h  ExpressionEval.cpp  ExpressionEval.h  ExpressionGraph.cpp  ExpressionGraph.h  ExpressionTranslate.cpp  ExpressionTranslate.h  ExpressionTree.cpp  ExpressionTree.h  HashMap.h  InstructionSet.h  (+90 more)
NULLC/SharedPtr/: checked_delete.hpp  quick_allocator.hpp  shared_ptr.hpp
NULLC/SupSpi/: SupSpi.cpp  SupSpi.h
NULLC/includes/: canvas.cpp  canvas.h  dynamic.cpp  dynamic.h  error.cpp  error.h  file.cpp  file.h  gc.cpp  gc.h  hashmap.cpp  hashmap.h  io.cpp  io.h  list.cpp  list.h  lua-regex.c  lua-regex.h  map.cpp  map.h  math.cpp  math.h  memory.cpp  memory.h  pugi.cpp  pugi.h  random.cpp  random.h  string.cpp  string.h  time.cpp  time.h  typeinfo.cpp  typeinfo.h  vector.cpp  vector.h  window.cpp  window.h
NULLC/org/nullc/: Nullc.java
NULLC/translation/: img_canvas.cpp  img_canvas_bind.cpp  old_vector_bind.cpp  runtime.cpp  runtime.h  std_dynamic.cpp  std_dynamic_bind.cpp  std_file.cpp  std_file_bind.cpp  std_gc.cpp  std_gc_bind.cpp  std_io.cpp  std_io_bind.cpp  std_list.cpp  std_math.cpp  std_math_bind.cpp  std_memory_bind.cpp  std_random_bind.cpp  std_range.cpp  std_string_bind.cpp  std_time.cpp  std_time_bind.cpp  std_typeinfo.cpp  std_typeinfo_bind.cpp  std_vector.cpp  std_vector_bind.cpp  win_window.cpp  win_window_bind.cpp  win_window_ex.cpp  win_window_ex_bind.cpp
nullcl/: CMakeLists.txt  main.cpp  nullcl.vcproj  nullcl_100.vcxproj  nullcl_110.vcxproj  nullcl_141.vcxproj  nullcl_142.vcxproj  nullcl_90.vcproj
tests/: CMakeLists.txt  TestAccessors.cpp  TestArray.cpp  TestArraySpecial.cpp  TestAutoArray.cpp  TestAutoRef.cpp  TestAutoRefCall.cpp  TestBase.cpp  TestBase.h  TestCallTransitions.cpp  TestClasses.cpp  TestClosures.cpp  TestCompileFail.cpp  TestCompileFail.h  TestConversions.cpp  TestCoroutine.cpp  TestCoroutineIterator.cpp  TestCycles.cpp  TestDefault.cpp  TestExternalCall.cpp  TestExternalCallInt.h  TestExtra.cpp  TestFinalizer.cpp  TestForEach.cpp  TestFromReference.cpp  TestFunctions.cpp  TestGC.cpp  TestGeneric.cpp  TestGenericExplicit.cpp  TestGenericType.cpp  TestImplicitArray.cpp  TestIndirectCall.cpp  TestInference.cpp  TestInheritance.cpp  TestInterface.cpp  TestInterface.h  TestJIT.cpp  TestLValue.cpp  TestListComprehension.cpp  TestLocalClass.cpp  (+38 more)
tests/nullc_in_nullc/: analyzer.nc  arrayview.nc  binarycache.nc  bytecode.nc  common.nc  compiler.nc  compilercontext.nc  errorlocation.nc  expressioncontext.nc  expressioneval.nc  expressiongraph.nc  expressiontree.nc  lexer.nc  nullcdef.nc  parsegraph.nc  parser.nc  parsetree.nc  reflist.nc  stringutil.nc  typetree.nc  typetreehelpers.nc  vectorview.nc
tests/translation/: func_test_bind.cpp  func_test_global_bind.cpp  test_alignment_bind.cpp  test_alignment_closure_bind.cpp  test_alignment_size_bind.cpp  test_alignment_struct_bind.cpp  test_big1_wrap_bind.cpp  test_big2_bind.cpp  test_big3_bind.cpp  test_big4_bind.cpp  test_big5_wrap_bind.cpp  test_big6_bind.cpp  test_big7_wrap_bind.cpp  test_big8_bind.cpp  test_defargs4_bind.cpp  test_ext1_bind.cpp  test_ext2_bind.cpp  test_ext3_bind.cpp  test_ext4_wrap_bind.cpp  test_ext4d_bind.cpp  test_ext5_bind.cpp  test_ext6_bind.cpp  test_ext7_wrap_bind.cpp  test_ext8_wrap_bind.cpp  test_ext8ex_bind.cpp  test_ext9_wrap_bind.cpp  test_extA_bind.cpp  test_extB_bind.cpp  test_extC2_wrap_bind.cpp  test_extC3_wrap_bind.cpp  test_extC_bind.cpp  test_extD_wrap_bind.cpp  test_extE2_wrap_bind.cpp  test_extE_wrap_bind.cpp  test_extF_wrap_bind.cpp  test_extG10_bind.cpp  test_extG11_bind.cpp  test_extG12_wrap_bind.cpp  test_extG2_bind.cpp  test_extG2b_bind.cpp  (+27 more)
(+127 files in other folders)
