# CMakeList.txt : CMake project for NULLC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_library (NULLC
"Allocator.h"
"Array.h"
"BinaryCache.cpp" "BinaryCache.h"
"Bytecode.cpp" "Bytecode.h"
"CodeGen_X86.cpp" "CodeGen_X86.h"
"CodeGenRegVm_X86.cpp" "CodeGenRegVm_X86.h"
"Compiler.cpp" "Compiler.h"
"DenseMap.h"
"Executor_Common.cpp" "Executor_Common.h"
"Executor_LLVM.cpp" "Executor_LLVM.h"
"Executor_RegVm.cpp" "Executor_RegVm.h"
"Executor_X86.cpp" "Executor_X86.h"
"ExpressionEval.cpp" "ExpressionEval.h"
"ExpressionGraph.cpp" "ExpressionGraph.h"
"ExpressionTranslate.cpp" "ExpressionTranslate.h"
"ExpressionTree.cpp" "ExpressionTree.h"
"HashMap.h"
"Instruction_X86.cpp" "Instruction_X86.h"
"InstructionTreeLlvm.cpp" "InstructionTreeLlvm.h"
"InstructionTreeRegVm.cpp" "InstructionTreeRegVm.h"
"InstructionTreeRegVmLower.cpp" "InstructionTreeRegVmLower.h"
"InstructionTreeRegVmLowerGraph.cpp" "InstructionTreeRegVmLowerGraph.h"
"InstructionTreeVm.cpp" "InstructionTreeVm.h"
"InstructionTreeVmCommon.cpp" "InstructionTreeVmCommon.h"
"InstructionTreeVmEval.cpp" "InstructionTreeVmEval.h"
"InstructionTreeVmGraph.cpp" "InstructionTreeVmGraph.h"
"IntrusiveList.h"
"Lexer.cpp" "Lexer.h"
"Linker.cpp" "Linker.h"
"nullbind.h"
"nullc.cpp" "nullc.h"
"nullc_debug.h"
"nullc_internal.h"
"nullc_remote.h"
"nullcdef.h"
"Output.h"
"ParseGraph.cpp" "ParseGraph.h"
"ParseTree.cpp" "ParseTree.h"
"Pool.h"
"stdafx.cpp" "stdafx.h"
"StdLib.cpp" "StdLib.h"
"StrAlgo.cpp" "StrAlgo.h"
"Trace.h"
"Translator_X86.cpp" "Translator_X86.h"
"Tree.h"
"TypeTree.cpp" "TypeTree.h"

"includes/canvas.cpp" "includes/canvas.h"
"includes/dynamic.cpp" "includes/dynamic.h"
"includes/file.cpp" "includes/file.h"
"includes/gc.cpp" "includes/gc.h"
"includes/io.cpp" "includes/io.h"
"includes/math.cpp" "includes/math.h"
"includes/pugi.cpp" "includes/pugi.h"
"includes/random.cpp" "includes/random.h"
"includes/string.cpp" "includes/string.h"
"includes/time.cpp" "includes/time.h"
"includes/typeinfo.cpp" "includes/typeinfo.h"
"includes/vector.cpp" "includes/vector.h"
"includes/window.cpp" "includes/window.h"
"includes/memory.cpp" "includes/memory.h"

"../external/pugixml/pugixml.cpp"
)

# TODO: Add tests and install targets if needed.
