# CMakeList.txt : CMake project for NULLC, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

link_libraries(NULLC)

# Add source to this project's executable.
add_executable (tests

"TestInterface.cpp"
"TestAccessors.cpp"
"TestArray.cpp"
"TestArraySpecial.cpp"
"TestAutoArray.cpp"
"TestAutoRef.cpp"
"TestAutoRefCall.cpp"
"TestBase.cpp"
"TestBase.h"
"TestCallTransitions.cpp"
"TestClasses.cpp"
"TestClosures.cpp"
"TestCompileFail.cpp"
"TestCompileFail.h"
"TestConversions.cpp"
"TestCoroutine.cpp"
"TestCoroutineIterator.cpp"
"TestCycles.cpp"
"TestDefault.cpp"
"TestExternalCall.cpp"
"TestExternalCallInt.h"
"TestExtra.cpp"
"TestFinalizer.cpp"
"TestForEach.cpp"
"TestFromReference.cpp"
"TestFunctions.cpp"
"TestGC.cpp"
"TestGeneric.cpp"
"TestGenericExplicit.cpp"
"TestGenericType.cpp"
"TestImplicitArray.cpp"
"TestIndirectCall.cpp"
"TestInference.cpp"
"TestInheritance.cpp"
"TestRun.cpp"
"TestInterface.h"
"TestJIT.cpp"
"TestListComprehension.cpp"
"TestLocalClass.cpp"
"TestLocalReturn.cpp"
"TestLongNames.cpp"
"TestLValue.cpp"
"TestMembers.cpp"
"TestMisc.cpp"
"TestModules.cpp"
"TestNamedArguments.cpp"
"TestNamespace.cpp"
"TestNew.cpp"
"TestNumerical.cpp"
"TestOverload.cpp"
"TestOverride.cpp"
"TestParseFail.cpp"
"TestParseFail.h"
"TestPointers.cpp"
"TestPostExpr.cpp"
"TestVariables.cpp"
"TestRuntimeFail.cpp"
"TestScope.cpp"
"TestSglEvent.cpp"
"TestSglHashmap.cpp"
"TestSglList.cpp"
"TestSglString.cpp"
"TestSglVector.cpp"
"TestSpecial.cpp"
"TestSpecialOp.cpp"
"TestSpeed.cpp"
"TestSpeed.h"
"TestStackRealloc.cpp"
"TestVarargs.cpp"
"UnitTests.cpp"
"UnitTests.h"
)

file(COPY "../Modules" DESTINATION ".")

# TODO: Add tests and install targets if needed.
